--- a/buildout_common.cfg
+++ b/buildout_common.cfg
@@ -12,7 +12,7 @@ eggs =
     Spawning
     pysqlite
     psycopg2
-    lxml == 2.3.3
+#    lxml == 2.3.3
     WSGIRewrite
     diazo [wsgi]
     PILwoTK == 1.1.6.4              
@@ -158,9 +158,9 @@ command =
 
 [lxml]
 recipe = z3c.recipe.staticlxml
-egg = lxml
+egg = lxml == 2.3.4
 libxslt-url = ftp://xmlsoft.org/libxslt/libxslt-1.1.26.tar.gz
-libxml2-url = ftp://xmlsoft.org/libxslt/libxml2-2.7.8.tar.gz
+libxml2-url = ftp://xmlsoft.org/libxslt/libxml2-2.8.0.tar.gz
 
 #install paster to set up adhocracy
 [paster]
