add mapnik part, but don't build it

--- a/buildout_common.cfg
+++ b/buildout_common.cfg
@@ -55,6 +55,7 @@ parts =
     vhost_conf
     sysv_conf
     supervisor
+#    mapnik
 
 index = http://adhocracy-buildout.cs.uni-duesseldorf.de/eggproxy/
 
@@ -137,10 +138,18 @@ solr = http://apache.lauf-forum.at//lucene/solr/1.4.1/apache-solr-1.4.1.tgz
 #solr = http://www.bitlib.net/mirror/apache.org//lucene/solr/3.2.0/apache-solr-3.2.0.zip 
 libevent = http://www.monkey.org/~provos/libevent-1.4.8-stable.tar.gz
 memcached = http://memcached.googlecode.com/files/memcached-1.4.7.tar.gz
+mapnik = https://github.com/downloads/mapnik/mapnik/mapnik-v2.0.1.tar.bz2
 
 ##############################################################################  
 # Setup adhocracy and python dependencies
 ##############################################################################
+
+[mapnik]
+recipe = hexagonit.recipe.cmmi
+url = ${urls:mapnik}
+configure-options =
+    PREFIX = ${buildout:directory}/parts/mapnik
+
 
 #get current user
 [env]
