--- a/buildout_common.cfg
+++ b/buildout_common.cfg
@@ -120,7 +120,7 @@ supervisor = 5010
 
 [urls]
 rabbitmq = http://www.rabbitmq.com/releases/rabbitmq-server/v2.5.1/rabbitmq-server-2.5.1.tar.gz
-solr = http://apache.lauf-forum.at//lucene/solr/1.4.1/apache-solr-1.4.1.tgz
+solr = http://archive.apache.org/dist/lucene/solr/1.4.1/apache-solr-1.4.1.tgz
 #solr = http://www.bitlib.net/mirror/apache.org//lucene/solr/3.2.0/apache-solr-3.2.0.zip 
 libevent = http://www.monkey.org/~provos/libevent-1.4.8-stable.tar.gz
 memcached = http://memcached.googlecode.com/files/memcached-1.4.7.tar.gz
