--- a/etc/adhocracy.ini.in
+++ b/etc/adhocracy.ini.in
@@ -196,6 +196,9 @@ adhocracy.proposal_geotags = True
 adhocracy.show_overview_map_on_index = True
 adhocracy.show_overview_map_on_instance_index = False
 
+# useful in settings where users can create instances
+adhocracy.show_instance_creators = False
+
 # Logging configuration
 [loggers]
 keys = root, adhocracy, sqlalchemy
