--- a/etc/adhocracy.ini.in
+++ b/etc/adhocracy.ini.in
@@ -196,6 +196,8 @@ adhocracy.proposal_geotags = True
 adhocracy.show_overview_map_on_index = True
 adhocracy.show_overview_map_on_instance_index = False
 
+adhocracy.hide_instance_list_in_navigation = False
+
 # useful in settings where users can create instances
 adhocracy.show_instance_creators = False
 
