add configuration option which hides the instances tab in the main navigation
Conflicts:
	etc/adhocracy.ini.in

--- a/etc/adhocracy.ini.in
+++ b/etc/adhocracy.ini.in
@@ -195,6 +195,8 @@ adhocracy.cache_tiles = True
 piwik.site = 
 piwik.id = 
 
+adhocracy.hide_instance_list_in_navigation = False
+
 # useful in settings where users can create instances
 adhocracy.show_instance_creators = False
 
