install lamson in virtualenv

--- a/mailserver.cfg
+++ b/mailserver.cfg
@@ -14,10 +14,12 @@ recipe = plone.recipe.command
 command =  
 # we install the lamson mailserver with the system python because the lamson egg has no setuptool support
 # http://lamsonproject.org/docs/getting_started.html
-    sudo easy_install lamson
-# genetate lamson projekt
+    . bin/activate
+    easy_install lamson
+# generate lamson projekt
     cd parts
     lamson gen -project mailserver
+    deactivate
 # how to use the lamson mailserver
     echo "\n\nLAMSON MAILSERVER\n\n"
 
