--- a/versions.cfg
+++ b/versions.cfg
@@ -73,6 +73,9 @@ js.jquery = 1.7.1
 js.jquery-qtip = 1.0.0
 js.socialshareprivacy = 1.3
 
+#lamson and some other packages
+Jinja2 = 2.6
+
 #nose 
 nose = 1.1.2
 coverage = 3.5
