original buildout_production_example restored

--- a/buildout_production_example.cfg
+++ b/buildout_production_example.cfg
@@ -16,19 +16,18 @@ parts +=
 #Override settings from buildout_common.cfg    
 ##############################################################################  
 
-#[ports]
-#main = 20071
-#memcached = 20075
-#rabbitmq = 20076
-#rabbitmq_nodename = mynode
-#solr = 20077
-#supervisor = 20079
+[ports]
+main = 20071
+memcached = 20075
+rabbitmq = 20076
+rabbitmq_nodename = mynode
+solr = 20077
+supervisor = 20079
 
 [adhocracy]
 #sqlalchemy.url = postgresql://account@localhost:5432/database
-sqlalchemy.url = mysql://normsetzung:AesiaraY4Gac2Zig@localhost/normsetzung
-secret = 603e3ef27d86d05daf4bf77f86e5e2504eb01143
-email.from = normsetzung-support@cs.uni-duesseldorf.de
+secret = 5a4ed2af889c507c48229d4d882108eea1fc82c5672ed33808e5de5f30
+email.from = mail@adhocracy.lan
 
 [adhocracy_code]
 branch = default
@@ -39,8 +38,8 @@ diazo_theme_rules_dir = ${buildout:directory}/src/adhocracy.adhocracy_theme/adho
 adhocracy.adhocracy_theme = hg https://bitbucket.org/liqd/adhocracy.adhocracy_theme
  
 [domains]
-main = normsetzung.cs.uni-duesseldorf.de
-#blog = adhocracystaticpages.liqd.net
+main = adhocracy.lan
+blog = adhocracystaticpages.liqd.net
 
 [adhocracy_conf] 
 recipe = collective.recipe.template[genshi]:genshi
