upgrade zc.buildout, mr.developer and distribute

--- a/versions.cfg
+++ b/versions.cfg
@@ -24,7 +24,7 @@ decorator = 3.3.1
 eventlet = 0.9.16
 greenlet = 0.3.1
 hexagonit.recipe.download = 1.5.0
-mr.developer = 1.19
+mr.developer = 1.21
 ore.recipe.fs = 0.3.1
 plone.recipe.command = 1.1
 pysqlite = 2.6.3
@@ -65,7 +65,7 @@ gocept.recipe.env = 1.0
 Genshi = 0.6
 argparse = 1.2.1
 elementtree = 1.2.6-20050316
-zc.buildout = 1.5.2
+zc.buildout = 1.6.1
 
 #fantastic resource management
 fanstatic = 0.11.4
@@ -113,9 +113,9 @@ iw.recipe.template = 0.2
 oauth2 = 1.5.170
 
 #Required by:
-#zc.buildout 1.5.2
+#zc.buildout
 setuptools = 0.6c12dev-r88846
-distribute = 0.6.19
+distribute = 0.6.28
 
 #Required by:
 #z3c.recipe.staticlxml 0.7.2
