--- a/etc/init.d__adhocracy_services.sh.template
+++ b/etc/init.d__adhocracy_services.sh.template
@@ -50,9 +50,14 @@ do_stop() {
 	#   1 if daemon was already stopped
 	#   2 if daemon could not be stopped
 	#   other if a failure occurred
-	if in_virtualenv bin/supervisorctl shutdown | grep -q "refused connection"; then
-		return 3
+	supervisor_msg=$(in_virtualenv bin/supervisorctl shutdown)
+	if [ "$?" -ne 0 ]; then
+		return 2
 	fi
+	if echo $supervisor_msg | grep -q "refused connection"; then
+		return 1
+	fi
+	return 0
 }
 
 do_status() {
