Preconfigure adhocracy projects and branches

--- a/buildout_common.cfg
+++ b/buildout_common.cfg
@@ -3,8 +3,8 @@
 extensions = mr.developer buildout.dumppickedversions
 environment-vars = PYTHON_EGG_CACHE ${buildout:directory}.python-eggs
 find-links += 
-	http://adhocracy-buildout.cs.uni-duesseldorf.de/mirrors/dist.plone.org/thirdparty/
-	http://dist.plone.org/thirdparty
+    http://adhocracy-buildout.cs.uni-duesseldorf.de/mirrors/dist.plone.org/thirdparty/
+    http://dist.plone.org/thirdparty
     http://initd.org/pub/software/psycopg/
 extends = versions.cfg
 versions = versions
@@ -17,7 +17,6 @@ eggs =
     diazo [wsgi]
     PILwoTK == 1.1.6.4              
     adhocracy 
-    adhocracy.wordpressbasic_theme
     BeautifulSoup
     fanstatic
     ipdb
@@ -100,12 +99,11 @@ profile_url =
 ##############################################################################
 
 [adhocracy_code]
-branch =  default
-diazo_theme_rules_dir = ${buildout:directory}/src/adhocracy.wordpressbasic_theme/adhocracy/wordpressbasic_theme
+branch =  relative-urls
 
 [sources]
 adhocracy = hg https://bitbucket.org/liqd/adhocracy [branch=${adhocracy_code:branch}]
-adhocracy.wordpressbasic_theme = hg https://bitbucket.org/liqd/adhocracy.wordpressbasic_theme
+adhocracy.hhu_theme = git https://github.com/hhucn/adhocracy.hhu_theme.git
 js.socialshareprivacy = hg https://bitbucket.org/csenger/js.socialshareprivacy
 js.jquery_joyride = hg https://bitbucket.org/csenger/js.jquery_joyride
 
