Fix mr.developer branch specification. The brackets in the docs denote optionality, not literal brackets!

--- a/buildout_common.cfg
+++ b/buildout_common.cfg
@@ -104,7 +104,7 @@ branch =  default
 diazo_theme_rules_dir = ${buildout:directory}/src/adhocracy.wordpressbasic_theme/adhocracy/wordpressbasic_theme
 
 [sources]
-adhocracy = hg https://bitbucket.org/liqd/adhocracy [branch=${adhocracy_code:branch}]
+adhocracy = hg https://bitbucket.org/liqd/adhocracy branch=${adhocracy_code:branch}
 adhocracy.wordpressbasic_theme = hg https://bitbucket.org/liqd/adhocracy.wordpressbasic_theme
 js.socialshareprivacy = hg https://bitbucket.org/csenger/js.socialshareprivacy
 js.jquery_joyride = hg https://bitbucket.org/csenger/js.jquery_joyride
