--- a/buildout_development.cfg
+++ b/buildout_development.cfg
@@ -63,7 +63,7 @@ diazo_theme_rules_dir = ${buildout:directory}/src/adhocracy.adhocracy_theme/adho
 
 [sources]
 # change to `hg ssh://hg@bitbucket.org` urls to pull via ssh
-adhocracy = hg https://bitbucket.org/liqd/adhocracy [branch=${adhocracy_code:branch}]
+adhocracy = hg https://bitbucket.org/liqd/adhocracy branch=${adhocracy_code:branch}
 #add custom theme package
 adhocracy.adhocracy_theme = hg https://bitbucket.org/liqd/adhocracy.adhocracy_theme
 adhocracy.wordpressbasic_theme = hg https://bitbucket.org/liqd/adhocracy.wordpressbasic_theme
