--- a/buildout_development.cfg
+++ b/buildout_development.cfg
@@ -56,17 +56,17 @@ mailserver_port = ${adhocracy:smtp_port}
 mailserver_logging_port = 8825
 
 [adhocracy_code]
-branch = default
+branch = master
 #add custom theme package
 #diazo_theme_rules_dir = ${buildout:directory}/src/adhocracy.wordpressbasic_theme/adhocracy/wordpressbasic_theme
 diazo_theme_rules_dir = ${buildout:directory}/src/adhocracy.adhocracy_theme/adhocracy/adhocracy_theme
 
 [sources]
-# change to `hg ssh://hg@bitbucket.org` urls to pull via ssh
-adhocracy = hg https://bitbucket.org/liqd/adhocracy branch=${adhocracy_code:branch}
+# change to `git ssh://git@bitbucket.org` urls to pull via ssh
+adhocracy = git https://github.com/liqd/adhocracy branch=${adhocracy_code:branch}
 #add custom theme package
-adhocracy.adhocracy_theme = hg https://bitbucket.org/liqd/adhocracy.adhocracy_theme
-adhocracy.wordpressbasic_theme = hg https://bitbucket.org/liqd/adhocracy.wordpressbasic_theme
+adhocracy.adhocracy_theme = git https://github.com/liqd/adhocracy.adhocracy_theme
+adhocracy.wordpressbasic_theme = git https://github.com/liqd/adhocracy.wordpressbasic_theme
 
 [domains]
 main = adhocracy.lan
