Adapt geo branch to github

--- a/buildout_common.cfg
+++ b/buildout_common.cfg
@@ -114,12 +114,12 @@ profile_url =
 ##############################################################################
 
 [adhocracy_code]
-branch =  default
+branch = master
 diazo_theme_rules_dir = ${buildout:directory}/src/adhocracy.wordpressbasic_theme/adhocracy/wordpressbasic_theme
 
 [sources]
-adhocracy = hg https://bitbucket.org/liqd/adhocracy [branch=${adhocracy_code:branch}]
-adhocracy.wordpressbasic_theme = hg https://bitbucket.org/liqd/adhocracy.wordpressbasic_theme
+adhocracy = git https://github.com/liqd/adhocracy branch=${adhocracy_code:branch}
+adhocracy.wordpressbasic_theme = git https://github.com/liqd/adhocracy.wordpressbasic_theme
 js.socialshareprivacy = hg https://bitbucket.org/csenger/js.socialshareprivacy
 js.jquery_joyride = hg https://bitbucket.org/csenger/js.jquery_joyride
 
@@ -163,7 +163,7 @@ recipe = collective.recipe.grp
 recipe = plone.recipe.command
 stop-on-error = true
 command = 
-    [ -f src/adhocracy/setup.py ] && cd src/adhocracy && hg pull && hg update
+    [ -f src/adhocracy/setup.py ] && cd src/adhocracy && git pull
 
 [lxml]
 recipe = z3c.recipe.staticlxml
