--- a/buildout_development.cfg
+++ b/buildout_development.cfg
@@ -64,11 +64,11 @@ branch = geo
 diazo_theme_rules_dir = ${buildout:directory}/src/adhocracy.offenekommune_theme/adhocracy/offenekommune_theme
 
 [sources]
-# change to `hg ssh://hg@bitbucket.org` urls to pull via ssh
-adhocracy = hg https://bitbucket.org/liqd/adhocracy [branch=${adhocracy_code:branch}]
+# change to `git ssh://git@bitbucket.org` urls to pull via ssh
+adhocracy = git https://github.com/liqd/adhocracy branch=${adhocracy_code:branch}
 #add custom theme package
-adhocracy.offenekommune_theme = hg https://bitbucket.org/liqd/adhocracy.offenekommune_theme
-adhocracy.wordpressbasic_theme = hg https://bitbucket.org/liqd/adhocracy.wordpressbasic_theme
+adhocracy.offenekommune_theme = git https://github.com/liqd/adhocracy.offenekommune_theme
+adhocracy.wordpressbasic_theme = git https://github.com/liqd/adhocracy.wordpressbasic_theme
 
 [domains]
 main = adhocracy.lan
