--- a/.gitignore
+++ b/.gitignore
@@ -2,24 +2,25 @@ var
 parts
 bin
 lib
-share
+lib64
+src
 eggs
+develop-eggs
 htmlcov
 include
 downloads
 installed_eggs
 docs
-src
-.*\.orig$
-.*\.egg-info$
-.*\.pyo$
-.*\.pyc$
-.*\.swp$
-.*\.swo$
-.*~$
-\.coverage
-\.mr.developer.cfg
-\.installed.cfg
+*.orig
+*.egg-info
+*.pyo
+*.pyc
+*.swp
+*.swo
+*~
+.coverage
+.mr.developer.cfg
+.installed.cfg
 etc/adhocracy.ini
 etc/rabbitmq-env.conf
 etc/unthemed.ini
