Adapt default branches to git move

--- a/buildout_production_example.cfg
+++ b/buildout_production_example.cfg
@@ -30,7 +30,7 @@ secret = 5a4ed2af889c507c48229d4d882108eea1fc82c5672ed33808e5de5f30
 email.from = mail@adhocracy.lan
 
 [adhocracy_code]
-branch = default
+branch = master
 #add custom theme package
 diazo_theme_rules_dir = ${buildout:directory}/src/adhocracy.adhocracy_theme/adhocracy/adhocracy_theme
  
