--- a/etc/adhocracy.ini.in
+++ b/etc/adhocracy.ini.in
@@ -190,7 +190,6 @@ adhocracy.cache_tiles = True
 # INSTALL: Add an HTTP header that identifies the server we're running on
 #adhocracy.include_machine_name_in_header = True
 
-
 # Statistics via Piwik
 piwik.site = 
 piwik.id = 
@@ -199,6 +198,16 @@ adhocracy.hide_instance_list_in_navigation = False
 
 # useful in settings where users can create instances
 adhocracy.show_instance_creators = False
+
+# show next milestones in instance overview
+adhocracy.show_instance_overview_milestones = True
+
+# number of upcoming milestones to show in instance overview
+adhocracy.number_instance_overview_milestones = 3
+
+# show newest proposals in instance overview
+adhocracy.show_instance_overview_proposals = False
+
 
 # Logging configuration
 [loggers]
