--- a/etc/adhocracy.ini.in
+++ b/etc/adhocracy.ini.in
@@ -213,6 +213,9 @@ adhocracy.number_instance_overview_milestones = 3
 # show newest proposals in instance overview
 adhocracy.show_instance_overview_proposals = False
 
+# hide categories in facet navigation if no proposal is assigned to it
+adhocracy.hide_empty_categories_in_facet_list = False
+
 
 # Logging configuration
 [loggers]
