default to adhocracy/develop in buildout/develop

--- a/buildout_common.cfg
+++ b/buildout_common.cfg
@@ -100,7 +100,7 @@ profile_url =
 ##############################################################################
 
 [adhocracy_code]
-branch = master
+branch = develop
 diazo_theme_rules_dir = ${buildout:directory}/src/adhocracy.wordpressbasic_theme/adhocracy/wordpressbasic_theme
 
 [sources]
