--- a/buildout_common.cfg
+++ b/buildout_common.cfg
@@ -106,6 +106,7 @@ diazo_theme_rules_dir = ${buildout:directory}/src/adhocracy.wordpressbasic_theme
 [sources]
 adhocracy = git https://github.com/liqd/adhocracy branch=${adhocracy_code:branch}
 adhocracy.wordpressbasic_theme = git https://github.com/liqd/adhocracy.wordpressbasic_theme
+adhocracy.adhocracy_theme = git https://github.com/liqd/adhocracy.adhocracy_theme
 js.socialshareprivacy = hg https://bitbucket.org/csenger/js.socialshareprivacy
 js.jquery_joyride = hg https://bitbucket.org/csenger/js.jquery_joyride
 
