Hide empty categories by default
Change configuration default `hide_empty_categories_in_facet_list` to
True, as showing them doesn't work as intended: Categories, which aren't
applicable to the current instance are also shown.

--- a/etc/adhocracy.ini.in
+++ b/etc/adhocracy.ini.in
@@ -219,7 +219,7 @@ adhocracy.number_instance_overview_milestones = 3
 adhocracy.show_instance_overview_proposals = False
 
 # hide categories in facet navigation if no proposal is assigned to it
-adhocracy.hide_empty_categories_in_facet_list = False
+adhocracy.hide_empty_categories_in_facet_list = True
 
 
 # Logging configuration
