added postgres port

--- a/buildout_common.cfg
+++ b/buildout_common.cfg
@@ -132,6 +132,7 @@ rabbitmq =  5006
 rabbitmq_nodename = bunny1
 solr =  5007
 supervisor = 5010
+postgres = 5008
 
 [urls]
 rabbitmq = http://www.rabbitmq.com/releases/rabbitmq-server/v2.5.1/rabbitmq-server-2.5.1.tar.gz
@@ -298,12 +299,14 @@ configure-options =
 [postgresql]
 recipe = hexagonit.recipe.cmmi
 url = http://ftp.postgresql.org/pub/source/v9.2.1/postgresql-9.2.1.tar.bz2
+ignore-existing = true
 configure-options =
 #    --prefix=${buildout:directory}
     --with-readline
     --enable-thread-safety
     --with-libs="${readline:location}/lib ${ncurses:location}/lib"
     --with-includes="${readline:location}/include ${ncurses:location}/include"
+    --with-pgport=${ports:supervisor}
 make-targets = install-world
 
 [postgresql-symlinks]
