--- a/buildout_production_example.cfg
+++ b/buildout_production_example.cfg
@@ -23,6 +23,7 @@ rabbitmq = 20076
 rabbitmq_nodename = mynode
 solr = 20077
 supervisor = 20079
+postgres = 20072
 
 [adhocracy]
 #sqlalchemy.url = postgresql://account@localhost:5432/database
