--- a/buildout_common.cfg
+++ b/buildout_common.cfg
@@ -306,7 +306,7 @@ configure-options =
     --enable-thread-safety
     --with-libs="${readline:location}/lib ${ncurses:location}/lib"
     --with-includes="${readline:location}/include ${ncurses:location}/include"
-    --with-pgport=${ports:supervisor}
+    --with-pgport=${ports:postgres}
 make-targets = install-world
 
 [postgresql-symlinks]
