--- a/buildout_production_example.cfg
+++ b/buildout_production_example.cfg
@@ -26,7 +26,7 @@ supervisor = 20079
 postgres = 20072
 
 [adhocracy]
-#sqlalchemy.url = postgresql://account@localhost:5432/database
+sqlalchemy.url = postgresql://adhocracy:adhoc@localhost:${ports:postgres}/adhocracy
 secret = 5a4ed2af889c507c48229d4d882108eea1fc82c5672ed33808e5de5f30
 email.from = mail@adhocracy.lan
 
