Make test mailserver work without root permission; added start script

--- a/mailserver.cfg
+++ b/mailserver.cfg
@@ -3,28 +3,27 @@
 
 parts +=
     mailserver_install
+    mailserver_bin
     mailserver_conf
 
 [ports]
 mailserver_port = 8823
 mailserver_logging_port = 8825
- 
+
 [mailserver_install] 
 recipe = plone.recipe.command
 command =  
 # we install the lamson mailserver with the system python because the lamson egg has no setuptool support
 # http://lamsonproject.org/docs/getting_started.html
-    easy_install lamson
+    ${buildout:directory}/bin/easy_install lamson
 # generate lamson projekt
     cd parts
-    lamson gen -project mailserver
+    ${buildout:directory}/bin/lamson gen -project mailserver
 # how to use the lamson mailserver
     echo "\n\nLAMSON MAILSERVER\n\n"
 
-    echo "Start the lamson mailserver to catch all send emails:"
-    echo "$ cd ${buildout:directory}/parts/mailserver/ "
-    echo "$ lamson start"
-    echo "$ lamson log -port ${ports:mailserver_logging_port} \n"
+    echo "Start the lamson mail server and the logging server:"
+    echo "$ ${buildout:directory}/bin/lamson_start\n"
 
     echo "Read the lamson log:"
     echo "$ less ${buildout:directory}/parts/mailserver/logs/lamson.log \n"
@@ -34,13 +33,23 @@ command =
     echo "$ mutt -F muttrc \n"
 
     echo "Stop mailserver and logging server:"
-    echo "$ lamson stop -ALL run \n"
-
-    echo "Problems:"
-    echo "Make sure the ports are avialable and the pid files are not locked. /n/n"
+    echo "$ ${buildout:directory}/bin/lamson stop -ALL run \n"
 
 update-command = ${mailserver_install:command}
 
+[mailserver_bin] 
+recipe = plone.recipe.command
+command =  
+    START="#/bin/bash\n
+           ${buildout:directory}/bin/lamson start -pid ${buildout:directory}/var/smtp.pid -FORCE True -chdir '${buildout:directory}/parts/mailserver/' \n
+           ${buildout:directory}/bin/lamson log -pid ${buildout:directory}/var/smtp-log.pid -port ${ports:mailserver_logging_port} -chdir '${buildout:directory}/parts/mailserver/'" 
+    echo $START > ${buildout:directory}/bin/lamson_start
+    chmod a+x ${buildout:directory}/bin/lamson_start
+    END="#/bin/bash\n
+         ${buildout:directory}/bin/lamson stop -pid ${buildout:directory}/var/smtp-log.pid -KILL True\n 
+         ${buildout:directory}/bin/lamson stop -pid ${buildout:directory}/var/smtp.pid -KILL True" 
+    echo $END > ${buildout:directory}/bin/lamson_stop
+    chmod a+x ${buildout:directory}/bin/lamson_stop 
 
 [mailserver_conf] 
 recipe = collective.recipe.template[genshi]:genshi
