--- a/mailserver.cfg
+++ b/mailserver.cfg
@@ -4,11 +4,9 @@
 parts +=
     mailserver_install
     mailserver_bin
-    mailserver_conf
 
 [ports]
-mailserver_port = 8823
-mailserver_logging_port = 8825
+mailserver_port = 8825
 
 [mailserver_install] 
 recipe = plone.recipe.command
@@ -17,23 +15,20 @@ command =
 # http://lamsonproject.org/docs/getting_started.html
     ${buildout:directory}/bin/easy_install lamson
 # generate lamson projekt
-    cd parts
-    ${buildout:directory}/bin/lamson gen -project mailserver
+    cd ${buildout:directory}/parts
+    ${buildout:directory}/bin/lamson gen -project mailserver -FORCE
 # how to use the lamson mailserver
     echo "\n\nLAMSON MAILSERVER\n\n"
 
-    echo "Start the lamson mail server and the logging server:"
-    echo "$ ${buildout:directory}/bin/lamson_start\n"
-
-    echo "Read the lamson log:"
-    echo "$ less ${buildout:directory}/parts/mailserver/logs/lamson.log \n"
+    echo "Start the lamson mail server:"
+    echo "$ ${buildout:directory}/bin/mailserver_start\n"
 
     echo "Read send emails:"
     echo "$ cd ${buildout:directory}/parts/mailserver/ "
     echo "$ mutt -F muttrc \n"
 
-    echo "Stop mailserver and logging server:"
-    echo "$ ${buildout:directory}/bin/lamson stop -ALL run \n"
+    echo "Stop mailserver server:"
+    echo "$ ${buildout:directory}/bin/mailserver_stop\n"
 
 update-command = ${mailserver_install:command}
 
@@ -41,18 +36,10 @@ update-command = ${mailserver_install:command}
 recipe = plone.recipe.command
 command =  
     START="#/bin/bash\n
-           ${buildout:directory}/bin/lamson start -pid ${buildout:directory}/var/smtp.pid -FORCE True -chdir '${buildout:directory}/parts/mailserver/' \n
-           ${buildout:directory}/bin/lamson log -pid ${buildout:directory}/var/smtp-log.pid -port ${ports:mailserver_logging_port} -chdir '${buildout:directory}/parts/mailserver/'" 
-    echo $START > ${buildout:directory}/bin/lamson_start
-    chmod a+x ${buildout:directory}/bin/lamson_start
+           ${buildout:directory}/bin/lamson log -pid ${buildout:directory}/var/smtp-log.pid -FORCE True -port ${ports:mailserver_port} -chdir '${buildout:directory}/parts/mailserver/'" 
+    echo $START > ${buildout:directory}/bin/mailserver_start
+    chmod a+x ${buildout:directory}/bin/mailserver_start
     END="#/bin/bash\n
-         ${buildout:directory}/bin/lamson stop -pid ${buildout:directory}/var/smtp-log.pid -KILL True\n 
-         ${buildout:directory}/bin/lamson stop -pid ${buildout:directory}/var/smtp.pid -KILL True" 
-    echo $END > ${buildout:directory}/bin/lamson_stop
-    chmod a+x ${buildout:directory}/bin/lamson_stop 
-
-[mailserver_conf] 
-recipe = collective.recipe.template[genshi]:genshi
-input = ${buildout:directory}/etc/mailserver_settings.py.in
-output = ${buildout:directory}/parts/mailserver/config/settings.py
- 
+         ${buildout:directory}/bin/lamson stop -pid ${buildout:directory}/var/smtp-log.pid -KILL True" 
+    echo $END > ${buildout:directory}/bin/mailserver_stop
+    chmod a+x ${buildout:directory}/bin/mailserver_stop 
