Switch to develop branch

--- a/buildout_common.cfg
+++ b/buildout_common.cfg
@@ -99,7 +99,7 @@ profile_url =
 ##############################################################################
 
 [adhocracy_code]
-branch =  relative-urls
+branch =  develop
 
 [sources]
 adhocracy = git https://github.com/liqd/adhocracy branch=${adhocracy_code:branch}
