--- a/etc/adhocracy.ini.in
+++ b/etc/adhocracy.ini.in
@@ -107,7 +107,7 @@ adhocracy.language = ${parts.adhocracy.language}
 # INSTALL: The site directory contains your site modifications of Adhocracy 
 # (e.g. logos, CSS, html pages). A skeleton site directory will be created 
 # by the "setup-app" paster command. 
-adhocracy.site.dir = ${parts.buildout.directory}/var/site
+adhocracy.site.dir = ${parts.buildout.directory}/src/adhocracy.hhu_theme/
 
 # INSTALL: A nice E-Mail address. 
 adhocracy.email.from = ${parts.adhocracy['email.from']}
