--- a/etc/adhocracy.ini.in
+++ b/etc/adhocracy.ini.in
@@ -209,6 +209,7 @@ piwik.id =
 
 # activate geo features
 adhocracy.proposal_geotags = True
+adhocracy.page_geotags = True
 adhocracy.show_overview_map_on_index = True
 adhocracy.show_overview_map_on_instance_index = False
 
