Update Postgis from 2.0.1 to 2.0.2
Download location has changed.

--- a/buildout_common.cfg
+++ b/buildout_common.cfg
@@ -356,7 +356,7 @@ configure-options =
   
 [postgis]
 recipe = zc.recipe.cmmi
-url = http://postgis.refractions.net/download/postgis-2.0.1.tar.gz
+url = http://download.osgeo.org/postgis/source/postgis-2.0.2.tar.gz
 keep-compile-dir = true
 extra_options =
 #    --prefix=${postgresql:location}
