Use relative URLs by default in development only (As per @nidico's suggestion in #4)

--- a/buildout_common.cfg
+++ b/buildout_common.cfg
@@ -84,6 +84,8 @@ sqlalchemy.url = sqlite:///${buildout:directory}/var/development.db
 #Site name for all instances, part of the html <title>, notification E-Mails etc
 site.name = Adhocracy
 language = de_DE
+# Use /i/instance/... instead of http://instance.adhocracy.lan/..
+relative_urls = False
 
 [twitter]
 username = 
