Upgrade supervisor and recipe
supervisor: 3.0a12 -> 3.0b1
collective.recipe.supervisor: 0.17 -> 0.18

--- a/versions.cfg
+++ b/versions.cfg
@@ -18,7 +18,7 @@ FormEncode = 1.2.4
 Markdown = 2.2.1
 Spawning = 0.9.7
 collective.recipe.omelette = 0.11
-collective.recipe.supervisor = 0.17
+collective.recipe.supervisor = 0.18
 collective.recipe.template = 1.9
 decorator = 3.3.1
 eventlet = 0.9.16
@@ -130,7 +130,7 @@ zc.recipe.cmmi = 1.3.5
 Babel = 0.9.6
 BeautifulSoup = 3.2.0
 meld3 = 0.6.7
-supervisor = 3.0a12
+supervisor = 3.0b1
 WSGIRewrite = 0.1.3.1
 Werkzeug = 0.7.1
 ipdb = 0.5
