--- a/versions.cfg
+++ b/versions.cfg
@@ -8,7 +8,7 @@
 
 #diazo
 diazo = 1.0rc4
-WebOb = 1.0.8
+WebOb = 1.2.3
 experimental.cssselect = 0.1
 lxml = 2.3.6
 repoze.xmliter = 0.5
@@ -17,10 +17,10 @@ repoze.xmliter = 0.5
 FormEncode = 1.2.4
 Markdown = 2.2.1
 Spawning = 0.9.7
-collective.recipe.omelette = 0.11
+collective.recipe.omelette = 0.15
 collective.recipe.supervisor = 0.18
 collective.recipe.template = 1.9
-decorator = 3.3.1
+decorator = 3.4.0
 eventlet = 0.9.16
 greenlet = 0.3.1
 hexagonit.recipe.download = 1.5.0
@@ -39,27 +39,26 @@ sqlalchemy-migrate = 0.7.2
 z3c.recipe.staticlxml = 0.8
 zc.recipe.egg = 1.3.2
 Babel = 0.9.6
-Beaker = 1.5.4
-BeautifulSoup = 3.2.0
 Mako = 0.4.2
-MarkupSafe = 0.12
+Beaker = 1.6.4
+MarkupSafe = 0.15
 PIL = 1.1.6
 PasteDeploy = 1.5.0
-PasteScript = 1.7.3
+PasteScript = 1.7.4.2
 Paste = 1.7.5.1
-Routes = 1.12.3
+Routes = 1.13
 SQLAlchemy = 0.7.9
-Tempita = 0.5dev
+Tempita = 0.5.1
 WebError = 0.10.3
 WebHelpers = 1.3
-WebTest = 1.2.3
+WebTest = 1.4.3
 amqplib = 1.0.2
 collective.recipe.solrinstance = 1.1
 oauth = 1.0.1
 recaptcha-client = 1.0.6
 
 #buildout
-collective.recipe.grp = 1.0
+collective.recipe.grp = 1.1.0
 gocept.recipe.env = 1.0
 Genshi = 0.6
 argparse = 1.2.1
@@ -93,7 +92,7 @@ Pygments = 1.4
 
 #Required by:
 #python-twitter 0.8.2
-simplejson = 2.1.6
+simplejson = 2.6.2
            
 #Required by:
 #iw.recipe.template 0.2
@@ -101,7 +100,7 @@ Cheetah = 2.2.1
 
 #Required by:
 #oauth2 1.5.170
-httplib2 = 0.7.4
+httplib2 = 0.7.7
 
 #Required by:
 #collective.recipe.solrinstance 1.1
@@ -109,18 +108,16 @@ iw.recipe.template = 0.2
 
 #Required by:
 #adhocracy 1.1dev
-oauth2 = 1.5.170
+oauth2 = 1.5.211
 
 #Required by:
 #zc.buildout
 setuptools = 0.6c12dev-r88846
-distribute = 0.6.28
+distribute = 0.6.32
 
 #Required by:
 #z3c.recipe.staticlxml 0.7.2
 zc.recipe.cmmi = 1.3.5
-
-
 
 
 #*************************************************************
@@ -128,14 +125,11 @@ zc.recipe.cmmi = 1.3.5
 #*************************************************************
 
 Babel = 0.9.6
-BeautifulSoup = 3.2.0
+BeautifulSoup = 3.2.1
 meld3 = 0.6.7
 supervisor = 3.0b1
 WSGIRewrite = 0.1.3.1
-Werkzeug = 0.7.1
-ipdb = 0.5
-ipython = 0.11
+Werkzeug = 0.8.3
+ipdb = 0.7
+ipython = 0.13.1
 ZopeSkel = 2.21.2 
- 
-
-
