Upgrade diazo (1.0rc4 -> 1.0.3)
And experimental.cssselect (0.1 -> 0.3)

--- a/versions.cfg
+++ b/versions.cfg
@@ -7,9 +7,9 @@
 [versions]
 
 #diazo
-diazo = 1.0rc4
+diazo = 1.0.3
 WebOb = 1.2.3
-experimental.cssselect = 0.1
+experimental.cssselect = 0.3
 lxml = 2.3.6
 repoze.xmliter = 0.5
 
