--- a/buildout_common.cfg
+++ b/buildout_common.cfg
@@ -104,8 +104,8 @@ profile_url =
 branch =  develop
 
 [sources]
-adhocracy = git https://github.com/liqd/adhocracy branch=${adhocracy_code:branch}
-adhocracy.hhu_theme = git https://github.com/hhucn/adhocracy.hhu_theme
+adhocracy = git https://github.com/liqd/adhocracy branch=${adhocracy_code:branch} update=false
+adhocracy.hhu_theme = git https://github.com/hhucn/adhocracy.hhu_theme update=false
 js.socialshareprivacy = hg https://bitbucket.org/csenger/js.socialshareprivacy
 js.jquery_joyride = hg https://bitbucket.org/csenger/js.jquery_joyride
 
