--- a/etc/adhocracy.ini.in
+++ b/etc/adhocracy.ini.in
@@ -85,6 +85,7 @@ cache_dir = ${parts.buildout.directory}/var/data
 beaker.session.key = adhocracy_state
 # INSTALL: Replace this with a randomly generated hash value:
 beaker.session.secret = ${parts.adhocracy.secret}
+adhocracy.auth.secret = ${parts.adhocracy.secret}
 
 # INSTALL: Use URLs like /i/meta/proposal/foo instead of
 #          http://meta.adhocracy.lan:5001/proposal/foo
