set lxml version only once

--- a/buildout_common.cfg
+++ b/buildout_common.cfg
@@ -12,7 +12,7 @@ eggs =
     Spawning
     pysqlite
     psycopg2
-#    lxml == 2.3.6
+    lxml 
     WSGIRewrite
     diazo [wsgi]
     PILwoTK == 1.1.6.4
@@ -168,7 +168,7 @@ command =
 
 [lxml]
 recipe = z3c.recipe.staticlxml
-egg = lxml == 2.3.6
+egg = lxml 
 libxslt-url = ftp://xmlsoft.org/libxslt/libxslt-1.1.26.tar.gz
 libxml2-url = ftp://xmlsoft.org/libxslt/libxml2-2.8.0.tar.gz
 
