undo remove revision_nr, (we need this because we still do not use proper releases ...)

--- a/buildout_common.cfg
+++ b/buildout_common.cfg
@@ -47,7 +47,6 @@ parts =
     cython-install
     shapely
     paster
-    adhocracy_switch_revision_number
     adhocpy
     adhocracy_conf
     adhocracy_setup
@@ -115,10 +114,11 @@ profile_url =
 
 [adhocracy_code]
 branch = develop
+revision_nr = HEAD
 diazo_theme_rules_dir = ${buildout:directory}/src/adhocracy.wordpressbasic_theme/adhocracy/wordpressbasic_theme
 
 [sources]
-adhocracy = git https://github.com/liqd/adhocracy branch=${adhocracy_code:branch}
+adhocracy = git https://github.com/liqd/adhocracy branch=${adhocracy_code:branch} rev=${adhocracy_code:revision_nr} 
 adhocracy.wordpressbasic_theme = git https://github.com/liqd/adhocracy.wordpressbasic_theme
 adhocracy.adhocracy_theme = git https://github.com/liqd/adhocracy.adhocracy_theme
 js.socialshareprivacy = hg https://bitbucket.org/csenger/js.socialshareprivacy
@@ -159,12 +159,6 @@ recipe = gocept.recipe.env
 #get current user group 
 [grp]
 recipe = collective.recipe.grp
-
-[adhocracy_switch_revision_number]
-recipe = plone.recipe.command
-stop-on-error = true
-command = 
-    [ -f src/adhocracy/setup.py ] && cd src/adhocracy && git pull
 
 [lxml]
 recipe = z3c.recipe.staticlxml
