buildout: fix including base.cfg

--- a/buildout_common.cfg
+++ b/buildout_common.cfg
@@ -20,6 +20,7 @@ auto-checkout = *
  
 extends =
     versions.cfg
+    buildouts/base.cfg
 #    buildouts/postgres.cfg
     buildouts/postgres_with_postgis.cfg
     buildouts/memcache.cfg
