--- a/buildouts/adhocracy.cfg
+++ b/buildouts/adhocracy.cfg
@@ -8,10 +8,10 @@
 ##############################################################################
 
 [buildout]
-#extends = base.cfg 
 eggs += 
     pysqlite
     WSGIRewrite
+    repoze.xmliter
     PILwoTK == 1.1.6.4
     adhocracy 
     BeautifulSoup
@@ -26,9 +26,9 @@ parts +=
     paster
     adhocpy
     adhocracy_conf
-    adhocracy_setup
     omelette
     supervisor
+    adhocracy_setup
 
 ##############################################################################  
 # System settings
