--- a/buildouts/adhocracy.cfg
+++ b/buildouts/adhocracy.cfg
@@ -7,7 +7,10 @@
 #
 ##############################################################################
 
-[buildout]
+[buildout]           
+# workaround to make aggregating supervisor:programms work 
+# to use this buildout standalone you need to include base.cfg
+#extends = base.cfg
 eggs += 
     pysqlite
     WSGIRewrite
