buildout: make build_debian buildout files work with the new setup

--- a/build_debian_mysql.cfg
+++ b/build_debian_mysql.cfg
@@ -1,12 +1,14 @@
-# Buildout conf for automated performance/integration testing with MySQL
+# Buildout conf to build adhocracy with the build_debian script
 
 [buildout]
-
 extends = 
     buildout_development.cfg
-
+extends -= 
+    buildouts/postgres.cfg
+    buildouts/postgres_with_postgis.cfg
+parts -=
+    adhocracy_setup
 eggs += mysql-python
-
 
 [adhocracy]
 sqlalchemy.url = mysql://adhocracy:adhoc@localhost:3309/adhocracy
