--- a/build_debian_postgres.cfg
+++ b/build_debian_postgres.cfg
@@ -1,10 +1,13 @@
-# Buildout conf for automated performance/integration testing with PostgreSQL
+# Buildout conf to build adhocracy with the build_debian script
 
 [buildout]
-
 extends = 
     buildout_development.cfg
-
+extends -= 
+    buildouts/postgres.cfg
+    buildouts/postgres_with_postgis.cfg
+parts -=
+    adhocracy_setup
 
 [adhocracy]
 sqlalchemy.url = postgresql://adhocracy:adhoc@localhost:5432/adhocracy
