buildout: make development.cfg work again

--- a/buildout_development.cfg
+++ b/buildout_development.cfg
@@ -8,9 +8,11 @@ extends =
 # we need zope only to make zope.testrecorder run, if you have problems, just delete it
     http://good-py.appspot.com/release/zope/2.13.10
     buildout_common.cfg
-    codecheck.cfg
-    mailserver.cfg
+    buildouts/codecheck.cfg
+    buildouts/mailserver.cfg
 parts += 
+    adhocpy
+    omelette 
     test
     coveragereport
     sphinxbuilder
@@ -25,7 +27,6 @@ always-checkout = true
 ##############################################################################
  
 eggs +=  
-#ease development
     adhocracy [test]
     Babel
     ipython
@@ -58,7 +59,34 @@ main.force_port = True
 eggs += ZopeSkel
 
 ##############################################################################  
-# Testing stuff   
+# Ease development
+##############################################################################  
+ 
+# python with all required eggs 
+[adhocpy]   
+recipe = zc.recipe.egg
+eggs =  ${buildout:eggs}
+interpreter = adhocpy
+scripts = adhocpy
+
+# unified directory structure of installed eggs (./parts/omelette)
+[omelette]
+recipe = collective.recipe.omelette
+eggs = 
+    ${buildout:eggs} 
+
+##############################################################################  
+# Documentation 
+##############################################################################  
+
+[sphinxbuilder]
+recipe = collective.recipe.sphinxbuilder
+source = ${buildout:directory}/src/adhocracy/docs
+build = ${buildout:directory}/docs
+eggs = ${buildout:eggs}
+
+##############################################################################  
+# Testing documentation stuff   
 ##############################################################################  
 
 [test]
@@ -75,11 +103,6 @@ defaults =
 recipe = zc.recipe.egg
 eggs = createcoverage    
 
-[sphinxbuilder]
-recipe = collective.recipe.sphinxbuilder
-source = ${buildout:directory}/src/adhocracy/docs
-build = ${buildout:directory}/docs
-eggs = ${buildout:eggs}
 
 [instance]
 recipe = plone.recipe.zope2instance
