--- a/buildout_common.cfg
+++ b/buildout_common.cfg
@@ -12,6 +12,7 @@ find-links +=
     http://initd.org/pub/software/psycopg/
 index = http://adhocracy-buildout.cs.uni-duesseldorf.de/eggproxy/
 versions = versions 
+#checkout all sources
 auto-checkout = *
 
 ##############################################################################  
@@ -57,9 +58,10 @@ postgres = 5008
 ##############################################################################  
  
 [postgres]
-#to generate adhocracy:sqlalchemy.url
+#needed to generate adhocracy:sqlalchemy.url
 dbname = adhocracy
 dbuser = adhocracy
+#needed to setup postgres
 initdb_dir = ${buildout:directory}/var/postgresql/data 
  
 ##############################################################################  
@@ -71,7 +73,7 @@ initdb_dir = ${buildout:directory}/var/postgresql/data
 debug = False
 #use geo features (You also need to include postgres_with_postgis instead of postgres)
 geo = True
-#... read buildout_with_theming.cfg for more info
+#use diazo theming - read buildout_with_theming.cfg for more info
 themed = False 
 
 protocol = http
