set buildout newest=false (performance)

--- a/buildout_common.cfg
+++ b/buildout_common.cfg
@@ -14,6 +14,8 @@ index = http://adhocracy-buildout.cs.uni-duesseldorf.de/eggproxy/
 versions = versions 
 #checkout all sources
 auto-checkout = *
+#do not look for new egg versions
+newest = false
 
 ##############################################################################  
 # Include buildout files to install adhocracy and dependencies
