set buildout socket_timeout=3 sec (performance)

--- a/buildout_common.cfg
+++ b/buildout_common.cfg
@@ -16,7 +16,9 @@ versions = versions
 auto-checkout = *
 #do not look for new egg versions
 newest = false
-
+#wait max seconds to download eggs
+socket_timeout = 3
+ 
 ##############################################################################  
 # Include buildout files to install adhocracy and dependencies
 ##############################################################################  
