--- a/buildouts/production.cfg
+++ b/buildouts/production.cfg
@@ -1,9 +1,13 @@
 ##############################################################################  
 # Buildout with utilities to install adhocracy on a production server
 #
-# todo: tests
+# todo: 
+#       make it work with build_debian script again
+#       add buildout_productive.cfg
+#       tests
 #       logfiles
 #       crontab
+#       
 #
 ##############################################################################
 
