undo removing user:adhocracy_user; make sysvinit work again

--- a/build_debian_mysql.cfg
+++ b/build_debian_mysql.cfg
@@ -10,6 +10,8 @@ parts -=
     adhocracy_setup
 eggs += mysql-python
 
+[user]
+adhocracy_user = adhocracy
+
 [adhocracy]
 sqlalchemy.url = mysql://adhocracy:adhoc@localhost:3309/adhocracy
-
