--- a/build_debian_postgres.cfg
+++ b/build_debian_postgres.cfg
@@ -9,6 +9,9 @@ extends -=
 parts -=
     adhocracy_setup
 
+[user]
+adhocracy_user = adhocracy
+
 [adhocracy]
 sqlalchemy.url = postgresql://adhocracy:adhoc@localhost:5432/adhocracy
 
