--- a/buildout_common.cfg
+++ b/buildout_common.cfg
@@ -32,6 +32,7 @@ extends =
     buildouts/solr.cfg
     buildouts/rabbitmq.cfg
     buildouts/adhocracy.cfg
+    buildouts/sysvinit.cfg
 # disable parts from included buildout files above
 parts -=
 # add additional eggs
@@ -56,6 +57,10 @@ rabbitmq_nodename = bunny1
 solr =  5007
 supervisor = 5010
 postgres = 5008
+
+[user]
+# use current user to start adhocracy
+adhocracy_user = ${env:USER}
 
 ##############################################################################  
 # Override postgres settings 
