--- a/etc/adhocracy.ini.in
+++ b/etc/adhocracy.ini.in
@@ -225,11 +225,13 @@ piwik.id =
 
 
 # activate geo features
+
+{% if parts.adhocracy.geo == 'True' %}
 adhocracy.proposal_geotags = True
 adhocracy.page_geotags = True
 adhocracy.show_overview_map_on_index = True
 adhocracy.show_overview_map_on_instance_index = False
-
+{% end %}
 
 # hide instance list in main navigation
 adhocracy.hide_instance_list_in_navigation = False
