disable always-checkout = true (performance)

--- a/buildout_development.cfg
+++ b/buildout_development.cfg
@@ -20,7 +20,7 @@ parts +=
     testrecorder 
 
 # Pull und update each package to get the newest versions
-always-checkout = true
+#always-checkout = true
 
 ##############################################################################  
 # Aditional eggs
